# routes/web.php
@@ -47,6 +47,7 @@ Route::prefix('v1')->middleware(['auth:sanctum', 'throttle:dashboard'])->group(f
     Route::get('/wishlists', [WishlistController::class, 'getUserWishlists']);
     Route::post('/wishlists', [WishlistController::class, 'createWishlist']);
     Route::patch('/wishlists/{id}', [WishlistController::class, 'updateWishlist']);
+    Route::patch('/wishlists/{id}/items/{itemId}', [WishlistController::class, 'updateWishlistItem']);
     Route::delete('/wishlists/{id}', [WishlistController::class, 'deleteWishlist']);
 });
 
